<package>
  <name>vp6242_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>vp6242_gazebo_plugins.</description>
  <maintainer email="mahisorn.w@gmail.com">Mahisorn Wongphati</maintainer>

  <license>BSD</license>

  <!--url type="website">https://github.com/hiveground-ros-package/hiveground_controllers/wiki</url-->
  <!-- <url type="bugtracker"></url> -->

  <author>Mahisorn Wongphati</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend> 
  <run_depend>roscpp</run_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>
  
  <!--export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export-->
  
</package>
